# ai-mail-mcp

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TESTING_IMPLEMENTATION.md  docker-compose.yml  jest.config.json  package.json  pyproject.toml  pytest.ini  quick_test.py  quick_test_node.js  setup-and-fix.py  setup.cfg  setup_and_fix.py  test-installation.sh  test-node.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md
.github/workflows/: ci-cd-emergency.yml  ci-cd-fixed.yml  ci-cd-robust.yml  ci-cd.yml  enhanced-ci-cd.yml  fix-ci-cd.yml  issue-management.yml  maintenance.yml  test-enhanced-pipeline.yml
docs/: TESTING.md  api-reference.md
docs/installation/: quick-start.md
docs/integrations/: platforms.md
docs/system-prompts/: README.md  basic_mail_prompt.md  code_assistant_prompt.md  collaborative_agent_prompt.md  customer_support_prompt.md  task_manager_prompt.md
docs/troubleshooting/: common-issues.md
examples/: claude-desktop-config.json  direct_integration.py  vscode-settings.json
scripts/: benchmark.py  dev_setup.py  health_check.py  maintenance.py  monitor.py
src/: ai_mail_server.py  index.ts
src/ai_mail_mcp/: __init__.py  agent.py  mailbox.py  models.py  monitor.py  server.py
src/ai_mail_mcp/orchestrator/: __init__.py  core.py  main.py  priority_manager.py  summary_engine.py  task_distributor.py  urgent_notices.py
tests/: basic.test.ts  integration.test.ts  jest.setup.ts  mcp-server.test.ts  performance-security.test.ts  test_advanced_features.py  test_ai_mail.py  test_enhanced_ai_mail.py
